[gd_scene load_steps=11 format=3 uid="uid://c6u8pd5xfvt8w"]

[ext_resource type="Script" path="res://src/levels/level_manager.gd" id="1_yjk2t"]
[ext_resource type="PackedScene" uid="uid://c4u8pd5xfvt8u" path="res://src/systems/enemy_spawner.tscn" id="2_abcde"]
[ext_resource type="PackedScene" uid="uid://c2u8pd5xfvt8s" path="res://src/enemies/standard_enemy.tscn" id="3_fghij"]
[ext_resource type="PackedScene" uid="uid://c3u8pd5xfvt8t" path="res://src/enemies/mini_boss.tscn" id="4_klmno"]
[ext_resource type="Script" path="res://src/debug/enemy_test_controller.gd" id="5_pqrst"]
[ext_resource type="PackedScene" uid="uid://c7u8pd5xfvt8x" path="res://src/debug/test_player.tscn" id="6_uvwxy"]

[sub_resource type="NavigationMesh" id="NavigationMesh_fghij"]
vertices = PackedVector3Array(-50, 0, -50, -50, 0, 50, 50, 0, 50, 50, 0, -50)
polygons = [PackedInt32Array(0, 1, 2, 3)]

[sub_resource type="PlaneMesh" id="PlaneMesh_klmno"]
size = Vector2(100, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pqrst"]
albedo_color = Color(0.3, 0.3, 0.3, 1)
roughness = 0.8

[sub_resource type="BoxShape3D" id="BoxShape3D_uvwxy"]
size = Vector3(100, 1, 100)

[node name="EnemyTestLevel" type="Node3D"]

[node name="LevelManager" type="Node" parent="."]
script = ExtResource("1_yjk2t")
level_id = "enemy_test_level"
level_name = "Enemy Test Level"
level_difficulty = 1
boss_id = "test_boss"
standard_enemy_count = 3
mini_boss_count = 1

[node name="EnemySpawner" parent="LevelManager" instance=ExtResource("2_abcde")]
auto_spawn = false

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="LevelManager"]
navigation_mesh = SubResource("NavigationMesh_fghij")

[node name="Environment" type="Node3D" parent="."]

[node name="Ground" type="StaticBody3D" parent="Environment"]
collision_layer = 1
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Ground"]
mesh = SubResource("PlaneMesh_klmno")
surface_material_override/0 = SubResource("StandardMaterial3D_pqrst")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_uvwxy")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 10, 0)
shadow_enabled = true

[node name="Enemies" type="Node3D" parent="."]

[node name="StandardEnemy" parent="Enemies" groups=["enemies"] instance=ExtResource("3_fghij")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -5)
has_ranged_attack = true

[node name="StandardEnemy2" parent="Enemies" groups=["enemies"] instance=ExtResource("3_fghij")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -5)
dodge_chance = 0.4
block_chance = 0.1

[node name="MiniBoss" parent="Enemies" groups=["mini_bosses"] instance=ExtResource("4_klmno")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)

[node name="PlayerSpawnPoint" type="Marker3D" parent="." groups=["player_spawn_point"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -20)

[node name="OverviewCamera" type="Camera3D" parent="." groups=["overview_camera"]]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 15, 20)
current = false

[node name="Instructions" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -15)
pixel_size = 0.05
modulate = Color(1, 0.8, 0.2, 1)
text = "Enemy Test Level
- Standard Enemy (left): Has ranged attacks
- Standard Enemy (right): Higher dodge chance
- Mini-Boss (center back): Phase transitions and special attacks"
font_size = 24
outline_size = 5
outline_modulate = Color(0, 0, 0, 1)

[node name="DebugInfo" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -15)
pixel_size = 0.05
modulate = Color(0.8, 1, 0.8, 1)
text = "Press F1 to toggle debug info
Press F2 to damage enemies (testing)
Press F3 to trigger mini-boss phase 2
Press Tab to switch camera views
Press ESC to return to menu"
font_size = 16
outline_size = 3
outline_modulate = Color(0, 0, 0, 1)

[node name="TestController" type="Node" parent="."]
script = ExtResource("5_pqrst")

[node name="TestUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActionPanel" type="Panel" parent="TestUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -200.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TestUI/ActionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="TestUI/ActionPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Test Actions"
horizontal_alignment = 1

[node name="StandardEnemyButton" type="Button" parent="TestUI/ActionPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Force Standard Enemy Attack"

[node name="RangedAttackButton" type="Button" parent="TestUI/ActionPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Force Ranged Attack"

[node name="MiniBossAttackButton" type="Button" parent="TestUI/ActionPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Force Mini-Boss Attack"

[node name="SpecialAttackButton" type="Button" parent="TestUI/ActionPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Force Special Attack"

[node name="DashAttackButton" type="Button" parent="TestUI/ActionPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Force Dash Attack"

[node name="TestPlayer" parent="." instance=ExtResource("6_uvwxy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20)

[connection signal="pressed" from="TestUI/ActionPanel/VBoxContainer/StandardEnemyButton" to="TestController" method="force_enemy_action" binds= ["StandardEnemy", "attack"]]
[connection signal="pressed" from="TestUI/ActionPanel/VBoxContainer/RangedAttackButton" to="TestController" method="force_enemy_action" binds= ["StandardEnemy", "ranged_attack"]]
[connection signal="pressed" from="TestUI/ActionPanel/VBoxContainer/MiniBossAttackButton" to="TestController" method="force_enemy_action" binds= ["MiniBoss", "attack"]]
[connection signal="pressed" from="TestUI/ActionPanel/VBoxContainer/SpecialAttackButton" to="TestController" method="force_enemy_action" binds= ["MiniBoss", "special_attack"]]
[connection signal="pressed" from="TestUI/ActionPanel/VBoxContainer/DashAttackButton" to="TestController" method="force_enemy_action" binds= ["MiniBoss", "dash_attack"]] 